[package]
name = "rfc_bot"
version = "0.1.0"
authors = ["parksb <parkgds@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11", features = ["blocking"] }
serde-xml-rs = "0.4"
serde_derive = "1.0"
serde = "1.0"
egg-mode = { version = "0.15", features = ["rustls_webpki"], default-features = false }
tokio = "0.2"
dotenv = "0.15"
